Thesis: a paragraph referencing the Equations package and comparing it to the Function command.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -1069,7 +1069,7 @@ Deriving the functional induction principle turned out to be pretty easy and it 
 
 But not all functions are as tame as quicksort -- some tougher classes of functions require slight modifications to the approach presented above. One such class are the functions that exhibit \textit{nested recursion}, i.e. a situation in which the result of a recursive call is an argument of another recursive call. These functions are problematic because the domain predicate can't be defined in the usual way: whether an element belongs to the domain might depend on whether the function's result for this argument belongs to the domain. Luckily, we can deal with such functions by first defining the inductive graph relation and then using it to represent the recursive calls in the definition of the domain predicate and then proceed as usual.
 
-Another not-so-tame class of recursive functions that do not easily submit to our technique for deriving the functional induction principle are functions that exhibit higher-order recursion, i.e. a situation in which the recursive calls are partially applied.\footnote{Coq can recognize basic functions of this kind (like \m{map} for a tree that can have a \m{list} of subtrees) as structurally recursive without any help from the user, but this relies on some heuristics in the termination checker and is not very reliable.} This time the problem is defining the inductive graph itself: we either have to define an additional inductive graph relation for each of the partially applied recursive calls\footnote{This is pretty much equivalent to the inductive graph of a variant of the function in which the higher-order recursive calls were replaced by first-order helper functions.} or at least an additional inductive graph relation for each function which takes the recursively defined function as argument. Either way this means a lot of additional work to be done, most of which is writing boring boilerplate code. In practice the situation is even worse than it sounds, because the automation we will see in section \ref{automate} often can't generate these definitions automatically.
+Another not-so-tame class of recursive functions that do not easily submit to our technique for deriving the functional induction principle are functions that exhibit \textit{higher-order recursion}, i.e. a situation in which the recursive calls are partially applied.\footnote{Coq can recognize basic functions of this kind (like \m{map} for a tree that can have a \m{list} of subtrees) as structurally recursive without any help from the user, but this relies on some heuristics in the termination checker and is not very reliable.} This time the problem is defining the inductive graph itself: we either have to define an additional inductive graph relation for each of the partially applied recursive calls\footnote{This is pretty much equivalent to the inductive graph of a variant of the function in which the higher-order recursive calls were replaced by first-order helper functions.} or at least an additional inductive graph relation for each function which takes the recursively defined function as argument. Either way this means a lot of additional work to be done, most of which is writing boring boilerplate code. In practice the situation is even worse than it sounds, because the automation we will see in section \ref{automate} often can't generate these definitions automatically.
 
 Before we finish, let's try to trace the history of functional induction. The term originated as a name for a Coq tactic in \cite{FunInd} and isn't widely known. Coq is most likely the only place where it is used -- searching Google for ``functional induction'' returns mostly Coq-related papers and Coq documentation pages intermixed with results in which the words ``functional'' and ``induction'' appear together but have unrelated meanings. I think that the technique itself doesn't have a standard name and trying to look it up on Wikipedia is also hopeless.
 
@@ -1137,7 +1137,7 @@ Luckily, we don't need to automate this process ourselves. It has already been d
     frame=lines,
     bgcolor=CoqIDE,
     firstline=315,
-    lastline=335
+    lastline=336
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1173,9 +1173,9 @@ The first one, called \m{f}, is a very weird way of defining the identity functi
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
-The second function, called \m{tmap}, is way of mapping its argument \m{g} over every node of a non-empty tree with finite branching. This function exhibits higher-order recursion because the expression \m{map (tmap g) l}: the recursive call to \m{tmap} is partial, i.e. not fully applied, and in this form it is passed to \m{map} as argument. This scheme of recursion is less problematic than nested recursion and therefore this time the \m{Function} command doesn't refuse to cooperate. Moreover, we don't even need to argue about termination of this function -- it is accepted after passing the ordinary guardedness check, which means that Coq considers it structurally recursive. But there's still a bit of a problem -- after the function is defined, we get two warning messages telling us that \m{Function} couldn't generate definition of the graph of the function and that it couldn't generate the functional inversion principle.
+The second function, called \m{tmap}, is way of mapping its argument \m{g} over every node of a non-empty tree with finite branching. This function exhibits higher-order recursion because of the expression \m{map (tmap g) l}: the recursive call to \m{tmap} is partial, i.e. not fully applied, and in this form it is passed to \m{map} as argument. This scheme of recursion is less problematic than nested recursion and therefore this time the \m{Function} command doesn't refuse to cooperate. Moreover, we don't even need to argue about termination of the function -- it is accepted after passing the ordinary guardedness check, which means that Coq considers it structurally recursive. But there's still a huge problem -- after the function is defined, we get two warning messages telling us that \m{Function} couldn't generate definition of the graph relation and that it couldn't generate the functional inversion principle. And without the graph relation, of course, we don't get any automation at all.
 
-
+These two recursion schemes seem really hopeless and we shouldn't expect \m{Function} to be of any use when dealing with them -- the most robust way would be to directly, manually apply the inductive domain method. But not all hope is lost! There exists another Coq plugin that can assists us with functions, called \m{Equations} \cite{Equations}. It's workings are vastly different from those of \m{Function} (including a very different, Haskell-inspired syntax), but the end effect is pretty similar: we define a function the way we want it to behave, we get some assistance with the termination proof, and then after the function is accepted all the nice reasoning principles are generated for us automatically. The strength of \m{Equations} is that it seems to handle nested recursion just fine -- in the case of the function \m{f}, we don't even need to argue about termination, because \m{Equations} sees through it immediately. On the other hand, when it comes to higher-order recursion, we are still fundamentally out of luck. However, since simple functions of this kind are considered structurally recursive by Coq, it may be a good idea to just simply use ordinary induction.
 
 \section{E pluribus unum} \label{epluribus}
 
