Thesis: final paragraph of section 5.3, together with some rewritings and typos fixes.

--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -750,7 +750,7 @@ The algorithmic part of our journey has come to and end -- we now have a working
 
 This is because, in accordance with concept/technique \#2, we ignored the matter of termination by turning Coq's termination checker off. In this section we will develop a better template that, when it is instantiated, guarantees that the concrete algorithm necessarily terminates. We will first learn how to do it manually (while hoping that we won't ever have to use this knowledge) and then we'll see a Coq feature which is just as good as the technique while being much more automated and easy to use.
 
-\section{The inductive domain method}
+\section{The inductive domain method} \label{inductivedomain}
 
 How do we prove that our algorithm terminates? Before we tackle this question, let's first recall \textit{why} we have to prove it: the only form of recursion allowed in Coq is \textit{structural recursion}, i.e. one in which recursive calls are made on subterms of the principal argument. Because terms are finite, this guarantees that all structurally recursive programs terminate and from termination (or rather, from strong normalization) follows consistency of Coq's logic. Thus, on the one hand, the restriction to structural recursion protects us from contradiction (and from other evils too), but on the other hand it can be quite inconvenient from the pragmatic programmer's point of view.
 
@@ -1162,7 +1162,7 @@ But we shouldn't be too happy: automation won't dispel all our problems with def
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
-The first one, called \m{f}, is a very weird way of defining the identity function on natural numbers (if this function were accepted, an ordinary induction on \m{n} would suffice to prove that it is indeed the identity). This function exhibits nested recursion because of the expression \m{f (f n')}: first we call \m{f} with the argument \m{n'}, which is a structurally recursive call on a subterm of \m{n}, so everything is fine so far, but then we call \m{f} with the argument \m{f n'}, i.e. the result of the previous call, which is not a structurally recursive call. We annotate the function with \m{measure id n}, in order to argue about its termination using well-founded induction (when we measure a natural number with the identity function, the resulting well-founded relation is simply $<$). But this maneuver didn't help and we fail miserably -- because of nested recursion, the \m{Function} command literally refuses to even consider our function and gives us an error message.
+The first one, called \m{weird\_id}, is a very weird way of defining the identity function on natural numbers (if this function were accepted, an ordinary induction on \m{n} would suffice to prove that it is indeed the identity). This function exhibits nested recursion because of the expression \m{weird\_id (weird\_id n')}: first we call \m{weird\_id} with the argument \m{n'}, which is a structurally recursive call on a subterm of \m{n}, and everything is fine so far, but then we call \m{weird\_id} with the argument \m{weird\_id n'}, i.e. the result of the previous call, which is not a structurally recursive call. We annotate the function with \m{measure id n}, in order to argue about its termination using well-founded induction (when we measure a natural number with the identity function, the resulting well-founded relation is simply $<$). But this maneuver doesn't work and we fail miserably -- because of nested recursion, the \m{Function} command literally refuses to even consider our function and gives us an error message.
 
 \inputminted
 [
@@ -1173,9 +1173,11 @@ The first one, called \m{f}, is a very weird way of defining the identity functi
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
-The second function, called \m{tmap}, is way of mapping its argument \m{g} over every node of a non-empty tree with finite branching. This function exhibits higher-order recursion because of the expression \m{map (tmap g) l}: the recursive call to \m{tmap} is partial, i.e. not fully applied, and in this form it is passed to \m{map} as argument. This scheme of recursion is less problematic than nested recursion and therefore this time the \m{Function} command doesn't refuse to cooperate. Moreover, we don't even need to argue about termination of the function -- it is accepted after passing the ordinary guardedness check, which means that Coq considers it structurally recursive. But there's still a huge problem -- after the function is defined, we get two warning messages telling us that \m{Function} couldn't generate definition of the graph relation and that it couldn't generate the functional inversion principle. And without the graph relation, of course, we don't get any automation at all.
+The second function, called \m{tmap}, is way of mapping its argument \m{f} over every node of a non-empty tree with finite branching. This function exhibits higher-order recursion because of the expression \m{map (tmap f) l}: the recursive call to \m{tmap} is partial, i.e. not fully applied, and in this form it is passed to \m{map} as argument. This scheme of recursion is less problematic than nested recursion and therefore this time the \m{Function} command doesn't refuse to cooperate. Moreover, we don't even need to argue about termination -- the function is accepted after passing the ordinary guardedness check, which means that Coq considers it structurally recursive. But there's still a huge problem -- after the function is defined, we get two warning messages telling us that \m{Function} couldn't generate definition of the graph relation and that it couldn't generate the functional inversion principle. And without the graph relation, of course, we don't get any automation at all.
 
-These two recursion schemes seem really hopeless and we shouldn't expect \m{Function} to be of any use when dealing with them -- the most robust way would be to directly, manually apply the inductive domain method. But not all hope is lost! There exists another Coq plugin that can assists us with functions, called \m{Equations} \cite{Equations}. It's workings are vastly different from those of \m{Function} (including a very different, Haskell-inspired syntax), but the end effect is pretty similar: we define a function the way we want it to behave, we get some assistance with the termination proof, and then after the function is accepted all the nice reasoning principles are generated for us automatically. The strength of \m{Equations} is that it seems to handle nested recursion just fine -- in the case of the function \m{f}, we don't even need to argue about termination, because \m{Equations} sees through it immediately. On the other hand, when it comes to higher-order recursion, we are still fundamentally out of luck. However, since simple functions of this kind are considered structurally recursive by Coq, it may be a good idea to just simply use ordinary induction.
+But not all hope is lost! There exists another, less popular but newer Coq plugin that can assist us with reasoning about termination and derive the functional induction principle for us, called \m{Equations} \cite{Equations}. Its internal workings are vastly different from those of \m{Function} (and it also has a very distinct, Haskell-like syntax), but the end effect is pretty similar. The strength of \m{Equations} is that it seems to handle nested recursion just fine -- in the case of the function \m{weird\_id}, we don't even need to argue about termination, because \m{Equations} sees through it immediately. On the other hand, when it comes to higher-order recursion, we are still fundamentally out of luck.
+
+To sum up, all of the boilerplate that we saw in sections \ref{inductivedomain} and \ref{funind} can be easily automated using either the \m{Function} command or the \m{Equations} package, provided that we avoid higher-order recursion and, in case of \m{Function}, also nested recursion. For these two kinds of recursion schemes, the most robust way of defining functions, proving termination and deriving the functional induction principle is to manually apply the inductive domain method. However, since simple examples of higher-order recursion are considered structurally recursive by Coq, it may be a good alternative idea to just use ordinary induction for the proofs.
 
 \section{E pluribus unum} \label{epluribus}
 
