--- a/Thesis/Thesis.tex
+++ b/Thesis/Thesis.tex
@@ -267,8 +267,6 @@ The explanation of elements prompts us to change our perspective on type theory 
 
 Set theory has two basic kinds of objects -- propositions and sets -- living in two separate layers. Propositions live in the logical layer, which consists of first order classical logic, whereas sets live in the set-theoretical layer, which consists of set theory axioms. Type theory, on the other hand, has only one basic kind of objects, namely types, and only one layer -- the type layer. Both propositions and sets can in type theory be interpreted using types.
 
-% TODO: membership predicate is propsition
-
 In set theory, the membership predicate $x \in A$ is a proposition which can be proved or disproved. It is decidable internally, because of the law of excluded middle, but not externally, because there is no computer program that can tell us whether $x \in A$. In type theory, $x : A$ is not a proposition, but a judgment, which means one can establish that it holds, but it makes no sense to negate it. It neither makes sense to talk about it's internal decidability. However, it is externally decidable, which means there is a computer program that checks whether it holds.
 
 In set theory, sets are semantic entities that need not, in general, be disjoint, so an element can belong to many sets. In type theory, types are syntactic entities that are always disjoint. Elements can belong to only one type, or, to be more precise, if an element belongs to two types, then these types are convertible.
@@ -284,9 +282,9 @@ In this section we give a very short Coq tutorial. Before reading it, the unfami
     frame=lines,
     bgcolor=CoqIDE
 ]
-{Coq}{Snippets/SpecVerification.v}
+{Coq}{Snippets/WayOfTheCoq.v}
 
-We start by importing modules for working with lists -- we will need some list functions and notations (Coq allows defining custom notations using a built-in notation mechanism), and also \m{lia}, a procedure for reasoning in \textbf{l}inear \textbf{i}nteger \textbf{a}rithmetic (hence the name).
+We start by importing some modules: one for working with lists, as we will need some list functions and notations (Coq allows defining custom notations using a built-in notation mechanism), another that contains \m{lia}, a procedure for reasoning in \textbf{l}inear \textbf{i}nteger \textbf{a}rithmetic (hence the name), and also some facts about Peano arithmetic and permutations of lists. For now we only need the \m{List} and \m{ListNotations} modules -- the rest will be useful later. In the future we will follow the convention that at the beginning of each chapter, we import code from the previous chapter without mentioning this fact explicitly.
 
 The command \m{Print} is part of the Vernacular -- a language of useful commands for looking up definitions and theorems, and other things usually provided at the IDE level. We use it to recall the definition of \m{list} and \m{app} (we modified the outputs of these commands to simplify our explanations).
 
@@ -394,12 +392,12 @@ So, how can we formally define the proposition ``the list of natural numbers $l$
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 1,
-    lastline = 17
+    firstline = 7,
+    lastline = 20
 ]
-{Coq}{Snippets/NotEasy.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
-This is exactly what the above definition says. We start by importing the required modules and then define an auxiliary function named \m{nth}, which returns the \m{n}-th element of the list \m{l} (wrapped in the \m{option} constructor \m{Some}) or \m{None} if the list is not long enough to have an \m{n}-th element. Then comes the definition of sortedness itself: the list \m{l} being sorted means that for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, when the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}.
+This is exactly what the above definition says. We start by defining an auxiliary function named \m{nth}, which returns the \m{n}-th element of the list \m{l} (wrapped in the \m{option} constructor \m{Some}) or \m{None} if the list is not long enough to have an \m{n}-th element. Then comes the definition of sortedness itself: the list \m{l} being sorted means that for any two indices \m{i} and \m{j} such that \m{i} comes before \m{j}, when the \m{i}-th element of \m{l} is \m{n} and the \m{j}-th element of \m{l} is \m{m}, then \m{n} is less than or equal to \m{m}.
 
 This definition looks quite correct (and it is), but it won't serve us well. This is because it defies the second part of our advice \#0 -- it is not easy to use. The reason why will be rather elusive for people who are not Coq experts,\footnote{Knowing at first sight that a definition like this one will later turn out to be quite clumsy requires precisely the kind of creativity and insight mentioned before that can't be packed into a repetitive, mindless technique.} but I will nonetheless try to give an appealing argument.
 
@@ -432,10 +430,10 @@ Let's try to restate the intuitive definition of sortedness, which says that ele
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 6,
-    lastline = 16
+    firstline = 47,
+    lastline = 57
 ]
-{Coq}{Snippets/ImprovingPatchworkDefinitions.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 We can easily formalize the above reformulated definition. First we define a helper relation \m{LessThanAll}, so that \m{LessThanAll n l} means that the number \m{n} is less than or equal to all numbers in the list \m{l}. Then comes the main definition: an empty list is sorted\footnote{We must remember this base case, even though it's quite implicit in the patchwork definition.}, and a list \m{h\ ::\ t} is sorted as soon as \m{h} is less than all elements of \m{t} and \m{t} itself is also sorted.
 
@@ -443,10 +441,10 @@ We can easily formalize the above reformulated definition. First we define a hel
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 22,
-    lastline = 27
+    firstline = 63,
+    lastline = 68
 ]
-{Coq}{Snippets/ImprovingPatchworkDefinitions.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 This definition can be simplified even more if we notice that it is not necessary to compare an element with all elements coming after it, but only with the one that immediately follows it.\footnote{This transformation crucially relies on the fact that the usual order relation on naturals is transitive. The generalized version of this definition, which we will see in the \hyperref[notabstract]{next section}, is equivalent to a generalized version of the patchwork definition only for transitive relations.} This simplified definition reads like this: empty and singleton lists are sorted and to prove that a list with at least two elements is sorted, we need to show that the first element is less than the second element and that the tail of this list is also sorted.
 
@@ -472,10 +470,10 @@ How do we put this into practice? It's quite simple: in our definition, we repla
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 33,
-    lastline = 38
+    firstline = 74,
+    lastline = 79
 ]
-{Coq}{Snippets/ImprovingPatchworkDefinitions.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 Note that we don't assume anything about the relation -- \m{R} can be any relation whatsoever, not necessarily a total order relation. This is the first glimpse of a concept we will meet later: don't assume what is not needed. To state the definition we don't need \m{R} to have any properties, so we don't assume any.
 
@@ -493,10 +491,10 @@ Having said that, how do we define what it means for two lists to be permutation
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 6,
-    lastline = 17
+    firstline = 81,
+    lastline = 92
 ]
-{Coq}{Snippets/JustRight.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 After all the praise inductive definitions got up to now, we might be tempted to declare victory and go on to implement the algorithm already, but that would be a bit hasty: this definition fails the ``easy to use'' criterion. This is even harder to see in advance than the clumsiness of our initial definition of sortedness -- most people would probably discover it as an empirical fact as soon as they tried to prove correctness of any nontrivial sorting algorithm. The reason is that some of them move list elements around in very different ways than allowed by the definition of \m{Permutation}. This is yet another reminder that finding good specifications is more an art than a science.
 
@@ -513,10 +511,10 @@ This one is admittedly quite murky. What is meant by ``aspect'' here? The best w
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 23,
-    lastline = 30
+    firstline = 98,
+    lastline = 105
 ]
-{Coq}{Snippets/JustRight.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 Such an idea is \textit{counting}: two lists are permutations of one another when they contain the same number of occurrences of each \m{x\ :\ A}. Note that, because we count elements, this new definition only applies to types that have decidable equality. This restriction is not a big problem in practice, because the need to sort functions, streams, or other such infinite objects lacking decidable equality, is pretty rare.
 
@@ -526,10 +524,10 @@ But the resulting definition by counting is \textit{not abstract enough}, becaus
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline = 35,
-    lastline = 40
+    firstline = 109,
+    lastline = 114
 ]
-{Coq}{Snippets/JustRight.v}
+{Coq}{Snippets/SpecifyTheProblem.v}
 
 The final specification of a sorting function that we have arrived at through our considerations is shown in the listing. A function \m{f} is a sorting function (according to some relation \m{R}, of which we think as the order) if the output is a sorted permutation of the input. We pack these notions into a class named \m{Sort} using a combination of parameters and fields - a distinction we will revisit later.
 
@@ -619,8 +617,8 @@ In the \hyperref[sanity1]{next section} we will see a technique that allows us t
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=6,
-    lastline=23
+    firstline=7,
+    lastline=24
 ]
 {Coq}{Snippets/AbstractTheAlgorithm.v}
 
@@ -645,8 +643,8 @@ In typical algorithmic settings the answer is not very enlightening: the user is
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=25,
-    lastline=46
+    firstline=28,
+    lastline=49
 ]
 {Coq}{Snippets/AbstractTheAlgorithm.v}
 
@@ -660,8 +658,8 @@ When we run this particular version of quicksort on a reverse-sorted example lis
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=52,
-    lastline=89
+    firstline=55,
+    lastline=92
 ]
 {Coq}{Snippets/AbstractTheAlgorithm.v}
 
@@ -724,8 +722,8 @@ We could have defined our template in a slightly different manner, namely with a
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=95,
-    lastline=115
+    firstline=98,
+    lastline=118
 ]
 {Coq}{Snippets/AbstractTheAlgorithm.v}
 
@@ -767,8 +765,8 @@ Back to our (almost) initial question: we need to prove termination because only
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=29,
-    lastline=48
+    firstline=5,
+    lastline=24
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -794,14 +792,14 @@ We now proceed to prove termination of the new quicksort template. The perfect (
 
 In classical mathematics well-founded induction also goes by the names of \textit{strong induction}, \textit{complete induction}, \textit{Noetherian induction} and many others. There it is defined in one of two ways: the first definition states that a relation is well-founded when it has no descending chains; the second says a relation on \m{A} is well-founded when all subsets of \m{A} have a minimal element. Classically these definitions are equivalent and equivalent to the definition given in the main text, but from the point of view of constructive mathematics they are inferior to the latter.
 
-For example, the relation ``is shorter than'' on \m{list A}, which we will use in the listing below, is well-founded because all lists are accessible. This should be intuitively clear: the empty list is accessible because all shorter lists (of which there are none) are accessible; all singleton lists are accessible, because all shorter lists (i.e. just the empty list) are accessible; all lists of length two are accessible, because all lists of length $0$ and $1$ are accessible and so on.%\footnote{Of course a formal proof of this fact goes by induction on the list whose accessibility we are showing, but watch out -- it's a little tricky.}
+For example, the relation ``is shorter than'' on \m{list A}, which we will use in the listing below, is well-founded because all lists are accessible. This should be intuitively clear: the empty list is accessible because all shorter lists (of which there are none) are accessible; all singleton lists are accessible, because all shorter lists (i.e. just the empty list) are accessible; all lists of length two are accessible, because all lists of length $0$ and $1$ are accessible and so on.
 
 \inputminted
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=50,
-    lastline=67
+    firstline=28,
+    lastline=45
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -826,8 +824,8 @@ But the beauty of mathematics in general and of our approach to algorithms in pa
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=3,
-    lastline=27
+    firstline=47,
+    lastline=71
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -837,8 +835,8 @@ Coming up with the proper definition of \m{TerminatingQSArgs} is straightforward
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=69,
-    lastline=89
+    firstline=73,
+    lastline=93
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -863,8 +861,8 @@ By listening to the advice in the above technique, we can hit two birds with one
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=121,
-    lastline=156
+    firstline=125,
+    lastline=160
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -878,8 +876,8 @@ The first thing we could have done differently is the relation between the prova
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=162,
-    lastline=174
+    firstline=166,
+    lastline=178
 ]
 {Coq}{Snippets/ProveTermination.v}
 
@@ -905,10 +903,10 @@ Another consequence is the behaviour of the extraction mechanism: because proofs
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=3,
-    lastline=42
+    firstline=194,
+    lastline=234
 ]
-{Coq}{Snippets/BoveCapretta.v}
+{Coq}{Snippets/ProveTermination.v}
 
 The above listing shows how \m{qs'}, its domain predicate \m{QSDom} and the termination proof \m{QSDom\_all} are extracted when the codomain of \m{QSDom} is \m{Type}. There's quite a bit of code and that should worry us, because this code is an artifact stemming from the fact that we had to use the inductive domain method to convince Coq that \m{qs'} terminates. We certainly don't want the termination proof to leave Coq and slip into Haskell, because the proof is not necessary here -- Haskell allows general recursion. In fact, we would like the extracted code to resemble our original implementation of \m{qs'} from chapter \ref{template} with the termination checker turned off. But when we look at the result of extraction for \m{qs'}, we clearly see that this is not the case.
 
@@ -918,10 +916,10 @@ There is a variant of the inductive domain method (arguably somewhat more comple
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=44,
-    lastline=55
+    firstline=238,
+    lastline=249
 ]
-{Coq}{Snippets/BoveCapretta.v}
+{Coq}{Snippets/ProveTermination.v}
 
 To get what we want, it therefore suffices to change the codomain of \m{QSDom} into \m{Prop} and use the exception to the rule for making recursive calls. The former task, whose results are shown in the listing above, is a piece of cake, but the latter has some technical overhead -- Coq is not smart enough to just let us match on the proof, so we will need to pack the pattern matching into special lemmas. One of these is shown in the listing below.
 
@@ -929,10 +927,10 @@ To get what we want, it therefore suffices to change the codomain of \m{QSDom} i
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=57,
-    lastline=76
+    firstline=251,
+    lastline=270
 ]
-{Coq}{Snippets/BoveCapretta.v}
+{Coq}{Snippets/ProveTermination.v}
 
 Even though when matching on the proof of \m{QSDom A l} there are two possible cases, \m{Short} and \m{Long}, we will match it only when we know the list is not short, which reduces the number of possible cases to one. The above inversion lemma, which retrieves a proof of \m{QSDom A lt} from the proof of \m{QSDom A l}, formalizes this simple intuition. Its proof, however, is a bit involved because of all the equational hypotheses which need to be rewritten at some point. We also need an analogous inversion lemma for \m{QSDom A gt} -- it is not shown in the listing because it is completely analogous. Note that we end the proof with \m{Defined}, not \m{Qed} -- this is crucial, because Coq will need to be able to inspect the resulting proofterm.
 
@@ -940,10 +938,10 @@ Even though when matching on the proof of \m{QSDom A l} there are two possible c
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=99,
-    lastline=123
+    firstline=293,
+    lastline=317
 ]
-{Coq}{Snippets/BoveCapretta.v}
+{Coq}{Snippets/ProveTermination.v}
 
 Armed with both lemmas, we can now implement \m{qs'} -- the implementation is shown in the listing above. The first important point to notice is that the principal argument is \m{d\ :\ QSDom A l}, as can be seen from the annotation \{\m{struct d}\}, but we don't match on \m{d} -- the definition proceeds like for our initial \m{qs'} from chapter \ref{template}, when the termination checker was turned off.
 
@@ -957,10 +955,10 @@ The last important thing to notice is how the recursive calls look like. We use 
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=183,
-    lastline=205
+    firstline=377,
+    lastline=399
 ]
-{Coq}{Snippets/BoveCapretta.v}
+{Coq}{Snippets/ProveTermination.v}
 
 The termination proof \m{QSDom\_all} doesn't change at all -- the fact that the codomain of \m{QSDom} is now \m{Prop} doesn't affect it in the slightest. The same can be said of \m{qs} and the default instance \m{TQSA\_default} -- their definitions are the same as before. When we run \m{qs} on an exemple list of naturals, can see the list also gets sorted just like before.
 
@@ -1000,8 +998,8 @@ For example, consider the function \m{div2} which divides a natural number by tw
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=108,
-    lastline=121
+    firstline=5,
+    lastline=18
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1011,8 +1009,8 @@ The inductive graph relation for our quicksort template is shown in the listing 
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=123,
-    lastline=129
+    firstline=20,
+    lastline=26
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1022,8 +1020,8 @@ The next step is to prove that \m{QSGraph} is ``correct'' with respect to \m{qs}
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=131,
-    lastline=157
+    firstline=28,
+    lastline=54
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1039,8 +1037,8 @@ With the lemma at hand, proving completeness is trivial: first we use the lemma 
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=159,
-    lastline=180
+    firstline=56,
+    lastline=77
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1052,8 +1050,8 @@ The proof is straightforward. We introduce assumptions to context and apply the 
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=182,
-    lastline=196
+    firstline=79,
+    lastline=93
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1083,8 +1081,8 @@ Before we proceed to see the automation, we will try to explore another way of d
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=200,
-    lastline=220
+    firstline=97,
+    lastline=117
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1094,8 +1092,8 @@ Even though deriving an induction principle for the helper function is very easy
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=222,
-    lastline=241
+    firstline=119,
+    lastline=138
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1105,8 +1103,8 @@ A smart Coq user could try to salvage the above proof by attempting to prove tha
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=243,
-    lastline=259
+    firstline=140,
+    lastline=156
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1136,8 +1134,8 @@ Luckily, we don't need to automate this process ourselves. It has already been d
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=315,
-    lastline=336
+    firstline=189,
+    lastline=210
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1157,8 +1155,8 @@ But we shouldn't be too happy: automation won't dispel all our problems with def
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=342,
-    lastline=348
+    firstline=214,
+    lastline=220
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1168,8 +1166,8 @@ The first one, called \m{weird\_id}, is a very weird way of defining the identit
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=350,
-    lastline=362
+    firstline=222,
+    lastline=234
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1187,8 +1185,8 @@ The verification goes here.
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=3,
-    lastline=53
+    firstline=240,
+    lastline=291
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1196,8 +1194,8 @@ The verification goes here.
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=292,
-    lastline=311
+    firstline=293,
+    lastline=312
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
@@ -1205,8 +1203,8 @@ The verification goes here.
 [
     frame=lines,
     bgcolor=CoqIDE,
-    firstline=368,
-    lastline=387
+    firstline=364,
+    lastline=381
 ]
 {Coq}{Snippets/VerificatioExNihilo.v}
 
